--- a/src/MusicTools/GuitarBundle/Resources/views/Guitar/new.html.twig
+++ b/src/MusicTools/GuitarBundle/Resources/views/Guitar/new.html.twig
@@ -1,15 +1,15 @@
 {% extends '::base.html.twig' %}
 
-{% block body -%}
+{% block content %}
     <h1>Guitar creation</h1>
 
     {{ form(form) }}
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('guitar') }}">
-            Back to the list
-        </a>
-    </li>
-</ul>
+    <ul class="record_actions">
+        <li>
+            <a href="{{ path('guitar') }}">
+                Back to the list
+            </a>
+        </li>
+    </ul>
 {% endblock %}
