--- a/web/less/variables.less
+++ b/web/less/variables.less
@@ -18,7 +18,7 @@
 @brand-success:         #5cb85c;
 @brand-info:            #5bc0de;
 @brand-warning:         #f0ad4e;
-@brand-danger:          #d9534f;
+@brand-danger:          #601C22;
 
 
 //== Scaffolding
@@ -144,9 +144,9 @@
 
 @btn-font-weight:                normal;
 
-@btn-default-color:              #333;
-@btn-default-bg:                 #fff;
-@btn-default-border:             #ccc;
+@btn-default-color:              @text-color;
+@btn-default-bg:                 #0c0c0c;
+@btn-default-border:             darken(@btn-default-bg, 2%);
 
 @btn-primary-color:              #fff;
 @btn-primary-bg:                 @brand-primary;
@@ -366,7 +366,7 @@
 
 @navbar-default-color:             @text-color;
 @navbar-default-bg:                @body-bg;
-@navbar-default-border:            darken(@navbar-default-bg, 6.5%);
+@navbar-default-border:            darken(@navbar-default-bg, 3%);
 
 // Navbar links
 @navbar-default-link-color:                #777;
@@ -702,7 +702,7 @@
 //
 //##
 
-@panel-bg:                    #fff;
+@panel-bg:                    #161616;
 @panel-body-padding:          15px;
 @panel-heading-padding:       10px 15px;
 @panel-footer-padding:        @panel-heading-padding;
@@ -712,9 +712,9 @@
 @panel-inner-border:          #ddd;
 @panel-footer-bg:             #f5f5f5;
 
-@panel-default-text:          @gray-dark;
-@panel-default-border:        #ddd;
-@panel-default-heading-bg:    #f5f5f5;
+@panel-default-text:          @text-color;
+@panel-default-border:        darken(@panel-bg, 3%);
+@panel-default-heading-bg:    @panel-bg;
 
 @panel-primary-text:          #fff;
 @panel-primary-border:        @brand-primary;
