--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -1,7 +1,11 @@
-{% macro menuItem(name, label, url) %}
+{% macro menuItem(name, label, url, icon) %}
     {% set current = (name in app.request.get('_route')) %}
     <li role="presentation" {% if current %}class="active"{% endif %}>
         <a href="{{ url }}">
+            {% if icon is defined %}
+            <span class="fa fa-{{ icon }}"></span>
+            {% endif %}
+
             {{ label|trans }}
 
             {% if current %}
@@ -28,22 +32,27 @@
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
+            {#<ul class="nav navbar-nav">
                 {{ macros.menuItem('guitar',     'link.guitar',     path('guitar')) }}
+            </ul>#}
+
+            <ul class="nav navbar-nav ">
+                <li>
+                    <a href="">
+                        features
+                    </a>
+                </li>
+
+                <li>
+                    <a href="">
+                        contact
+                    </a>
+                </li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Link</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                    </ul>
-                </li>
+                {{ macros.menuItem('login',    'link.login',    path('fos_user_security_login'),        'user') }}
+                {{ macros.menuItem('register', 'link.register', path('fos_user_registration_register'), 'user-plus') }}
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
