--- a/web/less/theme.less
+++ b/web/less/theme.less
@@ -4,7 +4,50 @@ body {
 }
 
 .navbar {
-    .box-shadow(0 0 3px rgba(0, 0, 0, 0.5));
+    .box-shadow(inset 0 0 3px rgba(0, 0, 0, 0.5));
+
+    .active {
+        > a {
+            border-bottom: 1px solid @brand-primary;
+            padding-bottom: @navbar-padding-vertical - 1px;
+        }
+    }
+}
+
+.login-form,
+.register-form {
+    background: rgba(0, 0, 0, 0.25);
+    padding: @line-height-computed 0;
+    margin-bottom: @line-height-computed;
+
+    h1 {
+        color: @brand-primary;
+    }
+
+    .user-logo {
+        margin: 0 auto;
+        vertical-align: middle;
+        color: @brand-primary;
+        border: 4px solid @brand-primary;
+
+        width: 120px;
+        height: 120px;
+        border-radius: 60px;
+
+        .fa {
+            vertical-align: middle;
+
+            &.fa-user {
+                font-size: 80px;
+                margin-top: 15px;
+            }
+
+            &.fa-user-plus {
+                font-size: 70px;
+                margin-top: 20px;
+            }
+        }
+    }
 }
 
 .panel {
