--- a/web/less/variables.less
+++ b/web/less/variables.less
@@ -508,9 +508,9 @@
 @state-warning-bg:               #fcf8e3;
 @state-warning-border:           darken(spin(@state-warning-bg, -10), 5%);
 
-@state-danger-text:              #a94442;
-@state-danger-bg:                #f2dede;
-@state-danger-border:            darken(spin(@state-danger-bg, -10), 5%);
+@state-danger-text:              @text-color;
+@state-danger-bg:                @brand-danger;
+@state-danger-border:            darken(@state-danger-bg, 5%);
 
 
 //== Tooltips
@@ -620,7 +620,7 @@
 //
 //## Define alert colors, border radius, and padding.
 
-@alert-padding:               15px;
+@alert-padding:               @padding-base-vertical;
 @alert-border-radius:         @border-radius-base;
 @alert-link-font-weight:      bold;
 
