--- a/app/Resources/views/header-authenticated.html.twig
+++ b/app/Resources/views/header-authenticated.html.twig
@@ -27,8 +27,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                {{ macros.menuItem('guitar',     'link.guitar',     path('guitar')) }}
-                {{ macros.menuItem('song_book',     'link.song_book',     '') }}
+                {{ macros.menuItem('guitar', 'link.guitar',    path('guitar')) }}
+                {{ macros.menuItem('song',   'link.song_book', path('song')) }}
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
