--- a/src/MusicTools/GuitarBundle/Resources/views/Guitar/new.html.twig
+++ b/src/MusicTools/GuitarBundle/Resources/views/Guitar/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
     {{ form_start(form) }}
-        <div class="panel panel-default panel-with-buttons">
+        <div class="panel panel-default">
             <div class="panel-heading">
                 <h3 class="panel-title">Guitar creation</h3>
             </div>
@@ -11,7 +11,7 @@
             </div>
         </div>
 
-        <div class="panel-buttons pull-right">
+        <div class="pull-right">
             <button type="submit" class="btn btn-primary">
                 <span class="fa fa-check"></span>
                 Create
