--- a/web/less/theme.less
+++ b/web/less/theme.less
@@ -51,23 +51,5 @@ body {
 }
 
 .panel {
-    position: relative;
-    z-index: 2;
-    .box-shadow(0 0 3px rgba(0, 0, 0, 0.5));
-}
-
-.panel-with-buttons {
-    margin-bottom: 0 !important;
-}
-
-.panel-buttons {
-    position: relative;
-    z-index: 1;
-    margin-bottom: @line-height-computed;
-    margin-right: @line-height-computed;
-    .btn {
-        border-top-left-radius: 0 !important;
-        border-top-right-radius: 0 !important;
-        border-top: none !important;
-    }
+    .box-shadow(none);
 }
