theme + Musician Bundle

--- a/src/MusicTools/GuitarBundle/Resources/views/Guitar/index.html.twig
+++ b/src/MusicTools/GuitarBundle/Resources/views/Guitar/index.html.twig
@@ -1,7 +1,21 @@
 {% extends '::base.html.twig' %}
 
 {% block content %}
-    <h1>Guitar list</h1>
+
+
+    <h1 class="page-header">
+        Guitar list
+
+        <div class="pull-right">
+            <a class=" -link" href="">
+                <span class="fa fa-fw fa-th-large"></span>
+            </a>
+            <a class=" -link" href="">
+                <span class="fa fa-fw fa-align-justify"></span>
+            </a>
+        </div>
+    </h1>
+
 
     <table class="records_list">
         <thead>
