--- a/src/MusicTools/GuitarBundle/Resources/views/Guitar/edit.html.twig
+++ b/src/MusicTools/GuitarBundle/Resources/views/Guitar/edit.html.twig
@@ -1,11 +1,15 @@
 {% extends '::base.html.twig' %}
 
 {% block content %}
+    <h3 class="page-header">
+        <div class="icon">
+            <span class="fa fa-pencil"></span>
+        </div>
+        Guitar edit
+    </h3>
+
     {{ form_start(edit_form) }}
         <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">Guitar edit</h3>
-            </div>
             <div class="panel-body">
                 {{ form_widget(edit_form) }}
             </div>
