--- a/src/MusicTools/GuitarBundle/Resources/views/Guitar/new.html.twig
+++ b/src/MusicTools/GuitarBundle/Resources/views/Guitar/new.html.twig
@@ -1,11 +1,15 @@
 {% extends '::base.html.twig' %}
 
 {% block content %}
+    <h1 class="page-header">
+        <div class="icon">
+            <span class="fa fa-plus"></span>
+        </div>
+        Guitar creation
+    </h1>
+
     {{ form_start(form) }}
         <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">Guitar creation</h3>
-            </div>
             <div class="panel-body">
                 {{ form_widget(form) }}
             </div>
