--- a/web/less/theme.less
+++ b/web/less/theme.less
@@ -34,7 +34,7 @@ body {
             text-align: center;
             display: inline-block;
             vertical-align: middle;
-            margin-right: floor(@grid-gutter-width / 2);
+            margin-right: 10px;
 
             > .fa {
                 font-size: 18px;
