--- a/src/MusicTools/GuitarBundle/Resources/views/Guitar/edit.html.twig
+++ b/src/MusicTools/GuitarBundle/Resources/views/Guitar/edit.html.twig
@@ -15,7 +15,7 @@
             </div>
         </div>
 
-        <div class="pull-right">
+        <div class="text-right">
             <button type="submit" class="btn btn-primary">
                 <span class="fa fa-check"></span>
                 Create
