--- a/src/MusicTools/SongBookBundle/Resources/views/Song/edit.html.twig
+++ b/src/MusicTools/SongBookBundle/Resources/views/Song/edit.html.twig
@@ -1,16 +1,36 @@
 {% extends '::base.html.twig' %}
 
 {% block content %}
-    <h1>Song edit</h1>
+    <h1 class="page-header">
+        <div class="icon">
+            <span class="fa fa-pencil"></span>
+        </div>
+        Song edit
+    </h1>
 
-    {{ form(edit_form) }}
+    {{ form_start(edit_form) }}
+        <div class="panel panel-default">
+            <div class="panel-body">
+                {{ form_widget(edit_form) }}
+            </div>
+        </div>
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('song') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
+        <div class="text-right">
+            <button type="submit" class="btn btn-primary">
+                <span class="fa fa-check"></span>
+                Create
+            </button>
+
+            <a href="{{ path('song') }}" class="btn btn-default">
+                <span class="fa fa-times"></span>
+                Cancel
+            </a>
+
+            <a href="" class="btn btn-danger">
+                <span class="fa fa-trash-o"></span>
+                Delete
+            </a>
+        </div>
+    {{ form_end(edit_form) }}
 {% endblock %}
+
