--- a/src/MusicTools/SongBookBundle/Resources/views/Song/new.html.twig
+++ b/src/MusicTools/SongBookBundle/Resources/views/Song/new.html.twig
@@ -5,7 +5,7 @@
         <div class="icon">
             <span class="fa fa-plus"></span>
         </div>
-        Song creation
+        Add a new song
     </h1>
 
     {{ form_start(form) }}
