--- a/src/MusicTools/GuitarBundle/Resources/views/Guitar/edit.html.twig
+++ b/src/MusicTools/GuitarBundle/Resources/views/Guitar/edit.html.twig
@@ -18,7 +18,7 @@
         <div class="text-right">
             <button type="submit" class="btn btn-primary">
                 <span class="fa fa-check"></span>
-                Create
+                Edit
             </button>
 
             <a href="{{ path('guitar') }}" class="btn btn-default">
