--- a/src/MusicTools/SongBookBundle/Resources/views/Song/index.html.twig
+++ b/src/MusicTools/SongBookBundle/Resources/views/Song/index.html.twig
@@ -1,49 +1,34 @@
 {% extends '::base.html.twig' %}
 
 {% block content %}
-    <h1 class="page-header">Song list</h1>
+    <h1 class="page-header">
+        Song list
 
-    <table class="records_list">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Title</th>
-                <th>Artist</th>
-                <th>Difficulty</th>
-                <th>Score</th>
-                <th>Status</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for entity in entities %}
-            <tr>
-                <td><a href="{{ path('song_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                <td>{{ entity.title }}</td>
-                <td>{{ entity.artist }}</td>
-                <td>{{ entity.difficulty }}</td>
-                <td>{{ entity.score }}</td>
-                <td>{{ entity.status }}</td>
-                <td>
-                <ul>
-                    <li>
-                        <a href="{{ path('song_show', { 'id': entity.id }) }}">show</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('song_edit', { 'id': entity.id }) }}">edit</a>
-                    </li>
-                </ul>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+        <a href="{{ path('song_new') }}" class="btn btn-primary btn-xs pull-right">
+            <span class="fa fa-plus"></span>
+            Add a new song
+        </a>
+    </h1>
 
-        <ul>
-        <li>
-            <a href="{{ path('song_new') }}">
-                Create a new entry
-            </a>
-        </li>
-    </ul>
-    {% endblock %}
+    {% for entity in entities %}
+        <div class="panel panel-default">
+            <div class="panel-body row">
+                <div class="col-md-2 text-center">
+                    <div class="text-center big-icon">
+                        <span class="fa fa-music"></span>
+                    </div>
+                </div>
+
+                <div class="col-md-10">
+                    <h2>{{ entity.title }}</h2>
+                    {% if entity.artist is defined %}
+                    <p>from {{ entity.artist }}</p>
+                    {% endif %}
+
+                    <a href="{{ path('song_show', { 'id': entity.id }) }}">show</a>
+                    <a href="{{ path('song_edit', { 'id': entity.id }) }}">edit</a>
+                </div>
+            </div>
+        </div>
+    {% endfor %}
+{% endblock %}
