--- a/web/less/theme.less
+++ b/web/less/theme.less
@@ -53,30 +53,33 @@ body {
     h1 {
         color: @brand-primary;
     }
+}
 
-    .user-logo {
-        margin: 0 auto;
+.big-icon {
+    margin: 0 auto;
+    vertical-align: middle;
+    color: @brand-primary;
+    border: 4px solid @brand-primary;
+
+    width: 120px;
+    height: 120px;
+    border-radius: 60px;
+
+    .fa {
         vertical-align: middle;
-        color: @brand-primary;
-        border: 4px solid @brand-primary;
 
-        width: 120px;
-        height: 120px;
-        border-radius: 60px;
+        font-size: 70px;
+        margin-top: 20px;
 
-        .fa {
-            vertical-align: middle;
-
-            &.fa-user {
-                font-size: 80px;
-                margin-top: 15px;
-            }
-
-            &.fa-user-plus {
-                font-size: 70px;
-                margin-top: 20px;
-            }
+        /*&.fa-user {
+            font-size: 80px;
+            margin-top: 15px;
         }
+
+        &.fa-user-plus {
+            font-size: 70px;
+            margin-top: 20px;
+        }*/
     }
 }
 
