--- a/web/less/theme.less
+++ b/web/less/theme.less
@@ -70,19 +70,13 @@ body {
 
         font-size: 70px;
         margin-top: 20px;
-
-        /*&.fa-user {
-            font-size: 80px;
-            margin-top: 15px;
-        }
-
-        &.fa-user-plus {
-            font-size: 70px;
-            margin-top: 20px;
-        }*/
     }
 }
 
 .panel {
     .box-shadow(none);
+}
+
+.dropzone {
+
 }
