--- a/src/MusicTools/SongBookBundle/Resources/views/Song/new.html.twig
+++ b/src/MusicTools/SongBookBundle/Resources/views/Song/new.html.twig
@@ -9,22 +9,33 @@
     </h1>
 
     {{ form_start(form) }}
-        <div class="panel panel-default">
-            <div class="panel-body">
-                {{ form_widget(form) }}
+        <div class="row">
+            <div class="col-md-3">
+                {{ form_row(form.cover) }}
             </div>
-        </div>
 
-        <div class="text-right">
-            <button type="submit" class="btn btn-primary">
-                <span class="fa fa-check"></span>
-                Create
-            </button>
+            <div class="col-md-9">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        {{ form_row(form.title) }}
+                        {{ form_row(form.artist) }}
+                        {{ form_row(form.rating) }}
+                        {{ form_row(form.mastery) }}
+                    </div>
+                </div>
 
-            <a href="{{ path('song') }}" class="btn btn-default">
-                <span class="fa fa-times"></span>
-                Cancel
-            </a>
+                <div class="text-right">
+                    <button type="submit" class="btn btn-primary">
+                        <span class="fa fa-check"></span>
+                        Create
+                    </button>
+
+                    <a href="{{ path('song') }}" class="btn btn-default">
+                        <span class="fa fa-times"></span>
+                        Cancel
+                    </a>
+                </div>
+            </div>
         </div>
     {{ form_end(form) }}
 {% endblock %}
