--- a/src/MusicTools/SongBookBundle/Resources/views/Song/index.html.twig
+++ b/src/MusicTools/SongBookBundle/Resources/views/Song/index.html.twig
@@ -14,9 +14,13 @@
         <div class="panel panel-default">
             <div class="panel-body row">
                 <div class="col-md-2 text-center">
+                    {% if entity.cover is not empty %}
+                        <img src="{{ asset(resource_path(entity.cover)) }}" />
+                    {% else %}
                     <div class="text-center big-icon">
                         <span class="fa fa-music"></span>
                     </div>
+                    {% endif %}
                 </div>
 
                 <div class="col-md-10">
