--- a/src/MusicTools/SongBookBundle/Resources/views/Song/show.html.twig
+++ b/src/MusicTools/SongBookBundle/Resources/views/Song/show.html.twig
@@ -1,35 +1,47 @@
 {% extends '::base.html.twig' %}
 
+{% import 'ElorfinUserInterfaceBundle:Show:fields.html.twig' as fields %}
+
 {% block content %}
-
-
     <div class="row">
+        {# Song cover #}
         <div class="col-md-3 text-center">
-            <div class="text-center big-icon">
-                <span class="fa fa-music"></span>
-            </div>
+            {% if entity.cover is not empty %}
+                <img src="{{ asset(resource_path(entity.cover)) }}" class="img-responsive" />
+            {% else %}
+                <div class="text-center big-icon">
+                    <span class="fa fa-music"></span>
+                </div>
+            {% endif %}
         </div>
+
         <div class="col-md-9">
-            <h1 class="page-header">{{ entity.title }} <small>{{ entity.artist }}</small></h1>
+            <div class="pull-right">
+                <a class="btn btn-default" href="">
+                    <span class="fa fa-pencil"></span>
+                    edit
+                </a>
+                <a class="btn btn-danger" href="">
+                    <span class="fa fa-trash-o"></span>
+                    delete
+                </a>
+            </div>
+            <h1 class="page-header">
+                {{ entity.title }} <small>{{ entity.artist }}</small>
+            </h1>
+
             <div class="panel panel-default">
                 <div class="panel-body">
-
+                    <div class="row">
+                        <div class="col-md-6 text-center">
+                            {{ fields.score_show(entity.rating, 0, 10, 'fa fa-fw fa-lg fa-heart', 'fa fa-fw fa-lg fa-heart-o') }}
+                        </div>
+                        <div class="col-md-6 text-center">
+                            {{ fields.score_show(entity.mastery, 0, 10, 'fa fa-fw fa-lg fa-star', 'fa fa-fw fa-lg fa-star-o') }}
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
-
-    <table class="record_properties">
-        <tbody>
-            <tr>
-                <th>Rating</th>
-                <td>{{ entity.rating }}</td>
-            </tr>
-            <tr>
-                <th>Status</th>
-                <td>{{ entity.mastery }}</td>
-            </tr>
-        </tbody>
-    </table>
 {% endblock %}
