--- a/web/less/variables.less
+++ b/web/less/variables.less
@@ -26,7 +26,7 @@
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-@body-bg:               #161616;
+@body-bg:               #161616; // #161616
 //** Global text color on `<body>`.
 @text-color:            #c7c7c7;
 
@@ -356,7 +356,7 @@
 //##
 
 // Basics of a navbar
-@navbar-height:                    50px;
+@navbar-height:                    60px;
 @navbar-margin-bottom:             @line-height-computed;
 @navbar-border-radius:             @border-radius-base;
 @navbar-padding-horizontal:        floor((@grid-gutter-width / 2));
@@ -364,7 +364,7 @@
 @navbar-collapse-max-height:       340px;
 
 @navbar-default-color:             @text-color;
-@navbar-default-bg:                @body-bg;
+@navbar-default-bg:                #161616;
 @navbar-default-border:            darken(@navbar-default-bg, 3%);
 
 // Navbar links
