--- a/app/Resources/views/header-authenticated.html.twig
+++ b/app/Resources/views/header-authenticated.html.twig
@@ -13,7 +13,7 @@
 
 {% import _self as macros %}
 
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="header navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -31,11 +31,13 @@
                 {{ macros.menuItem('song',   'link.song_book', path('song')) }}
             </ul>
 
+
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         <span class="fa fa-user"></span>
                         {{ app.user.username }}
+                        <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
                         <li>
@@ -60,6 +62,15 @@
                     </ul>
                 </li>
             </ul>
+
+            <form class="navbar-form navbar-right" role="search">
+                <div class="form-group">
+                    <div class="input-group">
+                        <span class="input-group-addon"><span class="fa fa-fw fa-search"></span></span>
+                        <input type="text" class="form-control" placeholder="Search" />
+                    </div>
+                </div>
+            </form>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
