--- a/src/MusicTools/SongBookBundle/Resources/views/Song/new.html.twig
+++ b/src/MusicTools/SongBookBundle/Resources/views/Song/new.html.twig
@@ -1,4 +1,6 @@
-{% extends '::base.html.twig' %}
+{% extends 'MusicToolsSongBookBundle::layout.html.twig' %}
+
+{% block content_title %}Add song{% endblock %}
 
 {% block content %}
     <h1 class="page-header">
