--- a/web/less/app.less
+++ b/web/less/app.less
@@ -8,11 +8,15 @@
 
 // Variables (override bootstrap default)
 @import "variables";
+@import "variables.custom";
 
 // UserInterface
 @import "@{vendorPath}/elorfin/user-interface-bundle/Elorfin/UserInterfaceBundle/Resources/less/app.less";
 
 @import "boilerplate";
+
+@import "components/header";
+@import "components/sidebar";
 
 @import "theme";
 
