--- a/app/Resources/views/header-authenticated.html.twig
+++ b/app/Resources/views/header-authenticated.html.twig
@@ -1,18 +1,3 @@
-{% macro menuItem(name, label, url) %}
-    {% set current = (name in app.request.get('_route')) %}
-    <li role="presentation" {% if current %}class="active"{% endif %}>
-        <a href="{{ url }}">
-            {{ label|trans }}
-
-            {% if current %}
-                <span class="sr-only">({{ 'link.current'|trans }})</span>
-            {% endif %}
-        </a>
-    </li>
-{% endmacro %}
-
-{% import _self as macros %}
-
 <nav class="header navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -27,13 +12,11 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                {{ macros.menuItem('guitar', 'link.guitar',    path('guitar')) }}
-                {{ macros.menuItem('song',   'link.song_book', path('song')) }}
+                {% block header_links %}{% endblock %}
             </ul>
 
-
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown">
+                <li class="dropdown active">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         <span class="fa fa-user"></span>
                         {{ app.user.username }}
@@ -62,15 +45,6 @@
                     </ul>
                 </li>
             </ul>
-
-            <form class="navbar-form navbar-right" role="search">
-                <div class="form-group">
-                    <div class="input-group">
-                        <span class="input-group-addon"><span class="fa fa-fw fa-search"></span></span>
-                        <input type="text" class="form-control" placeholder="Search" />
-                    </div>
-                </div>
-            </form>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
