--- a/src/MusicTools/SongBookBundle/Resources/views/Song/index.html.twig
+++ b/src/MusicTools/SongBookBundle/Resources/views/Song/index.html.twig
@@ -1,35 +1,10 @@
-{% extends '::base.html.twig' %}
+{% extends 'MusicToolsSongBookBundle::layout.html.twig' %}
 
 {% import 'ElorfinUserInterfaceBundle:Show:fields.html.twig' as fields %}
 
+{% block content_title %}My songbook{% endblock %}
+
 {% block content %}
-    <h1 class="sr-only">My songbook</h1>
-
-    <ol class="breadcrumb">
-        <li><a href="#">My songbook</a></li>
-        <li class="active">Data</li>
-    </ol>
-
-    <a href="{{ path('song_new') }}" class="btn btn-round btn-primary">
-        <span class="fa fa-fw fa-plus"></span>
-        <span class="sr-only">Add a new song</span>
-    </a>
-
-    {#<div class="pull-right">
-
-
-        <a href="{{ path('song_new') }}" class="btn btn-round btn-default">
-            <span class="fa fa-fw fa-pencil"></span>
-            <span class="sr-only">Add a new song</span>
-        </a>
-
-        <a href="{{ path('song_new') }}" class="btn btn-round btn-danger">
-            <span class="fa fa-fw fa-trash-o"></span>
-            <span class="sr-only">Add a new song</span>
-        </a>
-    </div>#}
-
-
     <div class="song-list">
         {% for entity in entities %}
         <div class="song-item">
