--- a/web/less/theme.less
+++ b/web/less/theme.less
@@ -1,46 +1,21 @@
-@sidebar-width: 70px;
-
 body {
-    padding-top: 70px;
-    /*background: url("../images/background.jpg") repeat scroll center top;*/
-    background: #202020 !important;
-}
-
-.header {
-    border: none;
-
-    // .box-shadow(inset 0 0 3px rgba(0, 0, 0, 0.5));
-    .box-shadow(none);
-
-    .navbar-brand {
-        width: @sidebar-width;
-        background-color: #0c0c0c;
-        text-align: center;
-    }
-
-    .active {
-        > a {
-            border-bottom: 1px solid @brand-primary;
-            padding-bottom: @navbar-padding-vertical - 1px;
-        }
-    }
-}
-
-.sidebar {
     padding-top: @navbar-height;
-    position: fixed;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    width: 70px;
-    background: @brand-primary;
-
-    & + .content {
-        margin-left: @sidebar-width;
-    }
 }
 
 .content {
+    .content-header {
+        padding-top: floor(@grid-gutter-width / 2);
+        margin-bottom: @line-height-computed;
+
+        h1 {
+            color: @brand-primary;
+            font-weight: 600;
+            padding: 0;
+            padding-bottom: 10px;
+            margin: 0;
+            font-size: 22px;
+        }
+    }
     .page-header {
         border-bottom: none;
         color: @brand-primary;
