--- a/app/Resources/views/sidebar.html.twig
+++ b/app/Resources/views/sidebar.html.twig
@@ -19,8 +19,8 @@
 
 <nav class="sidebar">
     <ul>
-        {{ macros.menuItem('guitar', 'suitcase',      'link.guitar',    path('guitar')) }}
-        {{ macros.menuItem('song',   'music',          'link.song_book', path('song')) }}
-        {{ macros.menuItem('theory', 'graduation-cap', 'link.theory',    path('theory')) }}
+        {{ macros.menuItem('guitar', 'suitcase',       'link.instrument', path('guitar')) }}
+        {{ macros.menuItem('song',   'music',          'link.song_book',  path('song')) }}
+        {{ macros.menuItem('theory', 'graduation-cap', 'link.theory',     path('theory')) }}
     </ul>
 </nav>
