--- a/web/less/variables.custom.less
+++ b/web/less/variables.custom.less
@@ -1,7 +1,7 @@
 @sidebar-width:              70px;
-@sidebar-bg:                 #6a6983;
-@sidebar-color:              #42415b;
-@sidebar-hover-color:        #24233d;
-@sidebar-active-color:       #24233d;
-@sidebar-padding-horizontal: 0;
+@sidebar-bg:                 #161616;
+@sidebar-color:              @navbar-default-link-color;
+@sidebar-hover-color:        @brand-primary;
+@sidebar-active-color:       @brand-primary;
+@sidebar-padding-horizontal: 5px;
 @sidebar-padding-vertical:   floor(@grid-gutter-width / 2);
