--- a/app/Resources/views/header-authenticated.html.twig
+++ b/app/Resources/views/header-authenticated.html.twig
@@ -2,20 +2,30 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#header-navbar" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="fa fa-ellipsis-v"></span>
             </button>
-            <a class="navbar-brand" href="#"><span class="fa fa-music"></span></a>
+            <a class="navbar-brand" href="#"><span class="fa fa-user"></span></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                {% block header_links %}{% endblock %}
+        <div class="collapse navbar-collapse" id="header-navbar">
+            <ul class="nav navbar-nav navbar-right">
+                {% for header_link in header_links %}
+                <li role="presentation" class="nav-link-{{ header_link.class|default('default') }}">
+                    <a href="{{ header_link.url }}">
+                        {% if header_link.icon is defined %}
+                            <span class="fa fa-{{ header_link.icon }}"></span>
+                        {% endif %}
+
+                        {{ header_link.label|trans }}
+                    </a>
+                </li>
+                {% endfor %}
             </ul>
 
-            <ul class="nav navbar-nav navbar-right">
+            {#<ul class="nav navbar-nav navbar-right">
                 <li class="dropdown active">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         <span class="fa fa-user"></span>
@@ -24,27 +34,18 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="#">
-                                <span class="fa fa-fw fa-user"></span>
-                                my profile
-                            </a>
+                            <a href="#"><span class="fa fa-fw fa-user"></span> my profile</a>
                         </li>
                         <li>
-                            <a href="#">
-                                <span class="fa fa-fw fa-cogs"></span>
-                                my settings
-                            </a>
+                            <a href="#"><span class="fa fa-fw fa-cogs"></span> my settings</a>
                         </li>
                         <li role="separator" class="divider"></li>
                         <li>
-                            <a href="{{ path('fos_user_security_logout') }}">
-                                <span class="fa fa-fw fa-sign-out"></span>
-                                logout
-                            </a>
+                            <a href="{{ path('fos_user_security_logout') }}"><span class="fa fa-fw fa-sign-out"></span> logout</a>
                         </li>
                     </ul>
                 </li>
-            </ul>
+            </ul>#}
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
