--- a/web/less/components/header.less
+++ b/web/less/components/header.less
@@ -1,7 +1,17 @@
-.header {
-    border: none;
+.nav-link-variant(@color) {
+    > a {
+        color: @color;
 
-    // .box-shadow(inset 0 0 3px rgba(0, 0, 0, 0.5));
+        &:hover,
+        &:focus {
+            color: darken(@color, 10%);
+        }
+    }
+}
+
+.header {
+    z-index: 1;
+    border: none;
     .box-shadow(none);
 
     .navbar-brand {
@@ -10,10 +20,17 @@
         text-align: center;
     }
 
-    /*.active {
-        > a {
-            border-bottom: 1px solid @brand-primary;
-            padding-bottom: @navbar-padding-vertical - 1px;
+    .navbar-nav {
+        > .nav-link-success {
+            .nav-link-variant(@brand-success);
         }
-    }*/
+
+        > .nav-link-primary {
+            .nav-link-variant(@brand-primary);
+        }
+
+        > .nav-link-danger {
+            .nav-link-variant(@brand-danger);
+        }
+    }
 }
