--- a/web/less/theme.less
+++ b/web/less/theme.less
@@ -1,8 +1,32 @@
+body,
+html {
+    position: relative;
+    height: 100%;
+    overflow: hidden;
+}
+
 body {
     padding-top: @navbar-height;
+    background: url("../images/background.jpg") repeat scroll center top;
+}
+
+.navbar {
+    .active {
+        > a {
+            border-bottom: 1px solid @brand-primary;
+            padding-bottom: @navbar-padding-vertical - 1px;
+        }
+    }
 }
 
 .content {
+    z-index: 2;
+    position: relative;
+    height: 100%;
+    overflow-y: auto;
+
+    .box-shadow(0 0 3px rgba(0, 0, 0, 0.5));
+
     .content-header {
         padding-top: floor(@grid-gutter-width / 2);
         margin-bottom: @line-height-computed;
